# rusttracer

./: .gitignore  Cargo.toml
assignments/: trabalho_2.md  trabalho_3.md  trabalho_final.md
src/: brdf.rs  bvh.rs  camera.rs  light.rs  main.rs  mesh.rs  object.rs  primitive.rs  ray.rs  sample.rs
