[package]
name = "rusttracer"
version = "0.1.0"
authors = ["William Cavalcante <williabreno9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
image = "0.22.3"
rand = "0.7.2"
lazy_static = "1.4.0"
obj = "0.9.0"
indicatif = "0.14.0"
